update docker image constants

--- a/core/server/scripts/_constants.env
+++ b/core/server/scripts/_constants.env
@@ -6,5 +6,5 @@
 # vvvvvvvvvvvvvvvv WARNING vvvvvvvvvvvvvvvvvvvvvvvvvv
 # If you change this, you also need to change the containerImage
 #  constant in the 'launcher' submodule!!
-IMAGE_ORG_AND_REPO="kurtosistech/kurtosis-core_api"
+IMAGE_ORG_AND_REPO="kurtosistech/core"
 # ^^^^^^^^^^^^^^^^ WARNING ^^^^^^^^^^^^^^^^^^^^^^^^^^
