--- a/cli/internal_testsuites/typescript/package.json
+++ b/cli/internal_testsuites/typescript/package.json
@@ -11,8 +11,8 @@
     "example-api-server-api-lib": "^0.3.4",
     "example-datastore-server-api-lib": "^0.4.4",
     "jest": "^27.3.1",
-    "kurtosis-core-api-lib": "1.59.6",
-    "kurtosis-engine-api-lib": "1.34.6",
+    "kurtosis-core-sdk": "0.49.3",
+    "kurtosis-engine-api-lib": "1.34.7",
     "loglevel": "^1.8.0",
     "neverthrow": "^4.3.1",
     "ts-jest": "^28.0.8",
