--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,12 @@ parameters:
   core-server-build-cache-key-prefix:
     type: string
     default: "core-server-go-mod-v1"   # Can bump this version to bust the cache
+  engine-source-repo-name:
+    type: string
+    default: kurtosis-engine-sdk
+  engine-server-build-cache-key-prefix:
+    type: string
+    default: "engine-server-go-mod-v1"   # Can bump this version to bust the cache
 
 # NOTE: Because CircleCI jobs run on separate machines from each other, we duplicate steps (like checkout) between jobs. This is because doing the "correct" DRY
 #  refactoring of, "one job for checkout, one job for build Docker image, etc." would require a) persisting files between jobs and b) persisting Docker images between
@@ -189,6 +195,100 @@ jobs:
             - "/home/circleci/go/pkg/mod"  # Go module cache on the cimg/go image, as reported by "go env GOMODCACHE"
             - "/home/circleci/.cache/go-build"  # Go build cache on the cimg/go image, as reported by "go env GOCACHE"
 
+  build_engine_api_golang:
+    docker:
+      - image: "cimg/go:<< pipeline.parameters.api-go-version>>"
+    steps:
+      - checkout
+
+      # If the only changes are to the docs, don't run the slow (and expensive) code checks
+      # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
+      - run: |
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
+            circleci-agent step halt
+          fi
+
+
+      # !!!!!!!!!! NOTE: We should NOT use our private Go repos here, because this API code will get published publicly !!!!!!!!
+      - run: engine/api/golang/scripts/build.sh
+
+  build_engine_api_typescript:
+    docker:
+      - image: "cimg/node:<< pipeline.parameters.api-node-version>>"
+    steps:
+      - checkout
+
+      # If the only changes are to the docs, don't run the slow (and expensive) code checks
+      # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
+      - run: |
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
+            circleci-agent step halt
+          fi
+
+      - run: engine/api/typescript/scripts/build.sh
+
+  build_engine_launcher:
+    docker:
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
+    steps:
+      - checkout
+
+      # If the only changes are to the docs, don't run the slow (and expensive) code checks
+      # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
+      - run: |
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
+            circleci-agent step halt
+          fi
+
+      # The 'git config' and 'go env' steps are to allow Go to read modules from our private Github repos
+      # The KURTOSISBOT_GITHUB_TOKEN is a secret provided at CI build time
+      - run: |
+          git config --global url."https://${KURTOSISBOT_GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
+          go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
+          engine/launcher/scripts/build.sh
+
+  build_engine_server:
+    docker:
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
+    steps:
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
+
+      - checkout
+
+      # If the only changes are to the docs, don't run the slow (and expensive) code checks
+      # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
+      - run: |
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
+            circleci-agent step halt
+          fi
+
+      - setup_remote_docker:
+          version: "<< pipeline.parameters.docker-engine-version>>"
+      - run: echo "${DOCKER_PASSWORD}" | docker login -u ${DOCKER_USERNAME} --password-stdin
+
+      # Cache our dependencies
+      - restore_cache:
+          keys:
+            - << pipeline.parameters.engine-server-build-cache-key-prefix>>-{{ checksum "engine/server/go.sum" }}
+
+      # The 'git config' and 'go env' steps are to allow Go to read modules from our private Github repos
+      # The KURTOSISBOT_GITHUB_TOKEN is a secret provided at CI build time
+      - run: |
+          git config --global url."https://${KURTOSISBOT_GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
+          go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
+          engine/server/scripts/build.sh
+
+      - save_cache:
+          key: << pipeline.parameters.engine-server-build-cache-key-prefix>>-{{ checksum "engine/server/go.sum" }}
+          paths:
+            - "/home/circleci/go/pkg/mod"  # Go module cache on the cimg/go image, as reported by "go env GOMODCACHE"
+            - "/home/circleci/.cache/go-build"  # Go build cache on the cimg/go image, as reported by "go env GOCACHE"
+  # -- End PR check jobs ---------------------------------------
+
   # -- End PR check jobs ---------------------------------------
 
   # -- Publish jobs --------------------------------------------
@@ -300,6 +400,91 @@ jobs:
           docker tag "${image_name_with_version}" "${image_name_no_version}"
           docker push "${image_name_with_version}"
           docker push "${image_name_no_version}"
+
+  publish_engine_api_source:
+    docker:
+      - image: cimg/base:2021.10
+    steps:
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
+
+      - checkout
+
+      - run: |
+          cd /tmp/
+          git clone https://${KURTOSISBOT_GITHUB_TOKEN}@github.com/kurtosis-tech/<< pipeline.parameters.engine-source-repo-name >>.git
+      - run: |
+          dest_api_dirpath="/tmp/<< pipeline.parameters.engine-source-repo-name >>/api"
+          rm -rf "${dest_api_dirpath}"
+          cp -r api "${dest_api_dirpath}"
+      # Now, swap Go module names to match the new repo we're pushing the code to
+      - run: |
+          cd /tmp/<< pipeline.parameters.engine-source-repo-name >>/api
+          # We need to consider the .proto files as well, b/c they (frustratingly) contain the Go module name
+          for pattern in "*.go" "go.mod" "*.proto"; do
+            sed -i 's,github.com/kurtosis-tech/kurtosis-engine-server,github.com/kurtosis-tech/<< pipeline.parameters.engine-source-repo-name >>,g' $(find . -type f -name "${pattern}")
+          done
+      # Push the code up to the remote
+      - run: |
+          source engine/server/scripts/_constants.env
+          version="$(kudet get-docker-tag)"
+          cd /tmp/<< pipeline.parameters.engine-source-repo-name >>
+          git config --global user.name "${KURTOSISBOT_GITHUB_USERNAME}"
+          git config --global user.email "${KURTOSISBOT_GITHUB_EMAIL}"
+          git add .
+          git commit -m "Committing ${version} files"
+          git push origin master
+          git tag "${version}"
+          git tag "v${version}"
+          git push --tags
+
+  publish_engine_api_typescript:
+    docker:
+      - image: "cimg/node:<< pipeline.parameters.api-node-version>>"
+    steps:
+      - checkout
+      - run: engine/api/typescript/scripts/build.sh
+      - npm-publisher/publish-from-package-version:
+          package-path: api/typescript
+          publish-token-variable: NPMJS_AUTH_TOKEN
+
+  publish_engine_server_image:
+    docker:
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
+    steps:
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
+
+      - checkout
+
+      - setup_remote_docker:
+          version: "<< pipeline.parameters.docker-engine-version>>"
+      - run: echo "${DOCKER_PASSWORD}" | docker login -u ${DOCKER_USERNAME} --password-stdin
+
+      # The 'git config' and 'go env' steps are to allow Go to read modules from our private Github repos
+      # The KURTOSISBOT_GITHUB_TOKEN is a secret provided at CI build time
+      - run: |
+          git config --global url."https://${KURTOSISBOT_GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
+          go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
+          engine/server/scripts/build.sh
+
+      - run: |
+          set -euo pipefail
+          source engine/server/scripts/_constants.env
+          version_to_publish="$(kudet get-docker-tag)"
+          echo "Version that will be published: ${version_to_publish}"
+          image_name_with_version="${IMAGE_ORG_AND_REPO}:${version_to_publish}"
+          image_name_no_version="${IMAGE_ORG_AND_REPO}:latest"
+          docker tag "${image_name_with_version}" "${image_name_no_version}"
+          docker push "${image_name_with_version}"
+          docker push "${image_name_no_version}"
+
   # -- End publishing jobs -------------------------------------
 
 workflows:
@@ -311,9 +496,9 @@ workflows:
             {
                 "replacementPatterns": [
                     {
-                        "pattern": "^../kurtosis-engine-server",
-                        "replacement": "https://docs.kurtosistech.com/kurtosis-engine-server"
-                    }
+                        "pattern": "^../kurtosis/",
+                        "replacement": "https://docs.kurtosistech.com/kurtosis/"
+                    }            
                 ],
                 "ignorePatterns": [
                     {
