--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -403,13 +403,14 @@ jobs:
 
   publish_engine_api_source:
     docker:
-      - image: cimg/base:2021.10
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
       # Install Kudet
       - run: |
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
           sudo apt install kudet
+          sudo apt get install yarn
 
       - checkout
 
@@ -425,8 +426,22 @@ jobs:
           cd /tmp/<< pipeline.parameters.engine-source-repo-name >>/api
           # We need to consider the .proto files as well, b/c they (frustratingly) contain the Go module name
           for pattern in "*.go" "go.mod" "*.proto"; do
-            sed -i 's,github.com/kurtosis-tech/kurtosis-engine-server,github.com/kurtosis-tech/<< pipeline.parameters.engine-source-repo-name >>,g' $(find . -type f -name "${pattern}")
+            sed -i 's,github.com/kurtosis-tech/kurtosis/core,github.com/kurtosis-tech/<< pipeline.parameters.core-source-repo-name >>,g' $(find . -type f -name "${pattern}")
+            sed -i 's,github.com/kurtosis-tech/kurtosis/engine,github.com/kurtosis-tech/<< pipeline.parameters.engine-source-repo-name >>,g' $(find . -type f -name "${pattern}")
           done
+      # Remove the local replace
+      # Use the latest version of the kurtosis-core-sdk-module
+      - run: |
+          cd /tmp/<< pipeline.parameters.engine-source-repo-name >>/api/golang
+          go mod edit -dropreplace github.com/kurtosis-tech/kurtosis-core-sdk/api/golang
+          go mod edit -droprequire github.com/kurtosis-tech/kurtosis-core-sdk/api/golang
+          version="$(kudet get-docker-tag)"
+          go get github.com/kurtosis-tech/kurtosis-core-sdk@${version}
+          go mod tidy
+      # clean up the local dependency on kurtosis-engine-sdk for typescript
+      - run: |
+          cd /tmp/<< pipeline.parameters.engine-source-repo-name >>/api/typescript
+          yarn add kurtosis-core-sdk
       # Push the code up to the remote
       - run: |
           source engine/server/scripts/_constants.env
@@ -447,6 +462,10 @@ jobs:
     steps:
       - checkout
       - run: engine/api/typescript/scripts/build.sh
+      # remove local kurtosis-core-sdk dependency and publish
+      - run: |
+          cd /tmp/<< pipeline.parameters.engine-source-repo-name >>/api/typescript
+          yarn add kurtosis-core-sdk
       - npm-publisher/publish-from-package-version:
           package-path: api/typescript
           publish-token-variable: NPMJS_AUTH_TOKEN
@@ -555,6 +574,36 @@ workflows:
             branches:
               ignore:
                 - master
+
+      - build_engine_api_golang:
+          # NOTE: Do NOT add our private Github user here; the API must be publicly-accessible so must build without them
+          context: []
+          filters:
+            branches:
+              ignore:
+                - master
+      - build_engine_api_typescript:
+          filters:
+            branches:
+              ignore:
+                - master
+      - build_engine_launcher:
+          context:
+            # This pulls in KurtosisBot's Github token, so that we can read from our private repos
+            - github-user
+          filters:
+            branches:
+              ignore:
+                - master
+      - build_engine_server:
+          context:
+            # This pulls in KurtosisBot's Github token, so that we can read from our private repos
+            - github-user
+            - docker-user
+          filters:
+            branches:
+              ignore:
+                - master
       # -- End PR check jobs ---------------------------------------
 
       # -- Artifact-publishing jobs --------------------------------
@@ -591,4 +640,33 @@ workflows:
               ignore: /.*/
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+
+      - publish_engine_api_source:
+          context:
+            - github-user
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires: [publish_core_api_source, publish_core_api_typescript]
+      - publish_engine_api_typescript:
+          context:
+            - npmjs-user
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+          requires: [publish_core_api_typescript]
+      - publish_engine_server_image:
+          context:
+            - github-user
+            - docker-user
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+
       # -- End artifact-publishing jobs ----------------------------
