set composite to true

--- a/engine/api/typescript/tsconfig.json
+++ b/engine/api/typescript/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "composite": true,
         "module": "commonjs",
         "outDir": "build",
         "downlevelIteration": true,
