--- a/api/typescript/tsconfig.json
+++ b/api/typescript/tsconfig.json
@@ -5,11 +5,10 @@
         "downlevelIteration": true,
         "declaration": true,
         "strict": true,
-        "lib": [
-            "es2015"
-        ]
+        "target": "ES2015"
     },
     "include": [
-        "src/**/*"
+        "core/src/**/*",
+        "engine/src/**/*"
     ]
 }
