--- a/api/typescript/tsconfig.json
+++ b/api/typescript/tsconfig.json
@@ -8,7 +8,6 @@
         "target": "ES2015"
     },
     "include": [
-        "core/src/**/*",
-        "engine/src/**/*"
+        "src/**/*"
     ]
 }
