--- a/cli/.circleci/config.yml
+++ b/cli/.circleci/config.yml
@@ -63,7 +63,7 @@ parameters:
   docker-engine-version:
     type: string
     default: 20.10.7
-  go-version:
+  cli-go-version:
     type: string
     default: "1.17"
   # The dirpath in jobs that use the built CLI binary where the workspace containing the CLI binary will be attached
@@ -94,7 +94,7 @@ jobs:
   # -- Build jobs ------------------------------------------
   build_cli:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.go-version >>"
+      - image: "cimg/go:<< pipeline.parameters.cli-go-version >>"
     resource_class: large
     steps:
       # Install goreleaser
@@ -440,7 +440,7 @@ jobs:
   # -- Artifact-publishing jobs --------------------------------
   push_cli_artifacts:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.go-version >>"
+      - image: "cimg/go:<< pipeline.parameters.cli-go-version >>"
     steps:
       # Install goreleaser
       - run: |
