use local typescript

--- a/api/typescript/tsconfig.json
+++ b/api/typescript/tsconfig.json
@@ -5,7 +5,8 @@
         "downlevelIteration": true,
         "declaration": true,
         "strict": true,
-        "target": "ES2015"
+        "target": "ES2015",
+        "composite": true
     },
     "include": [
         "src/**/*"
