--- a/internal_testsuites/typescript/tsconfig.json
+++ b/internal_testsuites/typescript/tsconfig.json
@@ -6,6 +6,11 @@
         "declaration": true,
         "strict": true
     },
+    "references": [
+        {
+            "path": "../../api/typescript"
+        }
+    ],
     "include": [
         "src/**/*"
     ]
