change tsconfig for allowing for composites while retaining root dir

--- a/api/typescript/tsconfig.json
+++ b/api/typescript/tsconfig.json
@@ -6,6 +6,7 @@
         "declaration": true,
         "strict": true,
         "target": "ES2015",
+        "rootDir": "./src/",
         "composite": true
     },
     "include": [
