--- a/api/typescript/tsconfig.json
+++ b/api/typescript/tsconfig.json
@@ -5,9 +5,7 @@
         "downlevelIteration": true,
         "declaration": true,
         "strict": true,
-        "target": "ES2015",
-        "rootDir": "./src/",
-        "composite": true
+        "target": "ES2015"
     },
     "include": [
         "src/**/*"
